[tool.poetry]
name = "9029-temu-order-data"
version = "0.1.0"
description = ""
authors = ["ZengYixing <id4zak@gmail.com>"]
readme = "README.md"
packages = [{include = "9029"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
streamlit = "^1.36.0"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
